Gerando imagem do projeto e do docker